# japanese-language-tools

./: Cargo.toml
src/: kanjidic2.rs  main.rs  tatoeba.rs
