[package]
name = "japanese-language-tools"
version = "0.1.0"
authors = ["André Twupack <andre.twupack@esg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
clap = "2"
postgres = "0.15"